[package]
name = "stellar-bit-server-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-bit-core = { git="https://github.com/stellar-bit/core" }
stellar-bit-central-hub-api = { git = "https://github.com/stellar-bit/central-hub-api" }
futures = "0.3"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21"
rand_chacha = { version = "0.3.1", features = ["serde", "serde1"] }
reqwest = { version = "0.11.24", features = ["cookies", "json"] }
dialoguer = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
color-backtrace = "0.6.1"